# rag-analysis

./: .gitignore  GOLD_AUDIT.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
data/: hamlet_questions.json
data/cache/: crag_rewrite_cache.json  evidence_plan_cache.json  recomp_cache.json  setr_selector_cache.json
data/macrag/: hamlet_macrag_slices.jsonl  hamlet_macrag_summaries.jsonl  summary_cache.json
hamlet_qa/: __init__.py  build_chunks.py  chunking.py  config.py  experiment.py  generation.py  inspect_results.py  io_utils.py  prompts.py  questions.py  read_results.py  report.py  results_html.py  retrieval.py  run_experiment.py
hamlet_qa/cli/: annotate_metrics.py  build_chunks.py  build_macrag_index.py  calibrate_crag.py  inspect_results.py  run_experiment.py
hamlet_qa/core/: __init__.py  chunking.py  config.py  context.py  experiment.py  generation.py  llm_cache.py  prompts.py  questions.py  retrieval.py  text.py
hamlet_qa/features/: __init__.py  registry.py
hamlet_qa/inspection/: __init__.py  report.py  results_html.py
hamlet_qa/metrics/: __init__.py  annotate.py  ci.py  evidence_role.py  plan_eval.py  sufficient_context.py
runs/_dry/: results.jsonl  run_config.json
runs/first_hamlet_probe/: hamlet_chunks.jsonl  hamlet_questions_input.json  raw_results_readable.md  (+2 more)
tests/: __init__.py  test_chunking.py  test_config.py  test_context_assembly.py  test_evidence_plan.py  test_experiment.py  test_hygiene.py  test_metrics.py  test_questions.py  test_reader_support.py  test_report.py  test_results_html.py  test_retrieval.py
(+70 files in other folders)
