[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamlet-qa-failure-analysis"
version = "0.1.0"
description = "Inspectable long-document QA failure-analysis harness for Hamlet."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Yifan Luo" }
]
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.51.0",
  "sentence-transformers>=2.7.0",
  "faiss-cpu>=1.7.4",
  "vllm",
  "numpy>=1.24.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["hamlet_qa"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
